[gd_scene load_steps=11 format=3 uid="uid://ch4o4vh6ygj3b"]

[ext_resource type="Script" uid="uid://bqg8wxwrn3qt3" path="res://player/player.gd" id="1_c4pnv"]
[ext_resource type="Script" uid="uid://cmca42ot4hlfv" path="res://VFEZ-godot-main/vfez_material_2d.gd" id="2_x7bl2"]
[ext_resource type="Texture2D" uid="uid://b0ixbdxnww8mq" path="res://player/horse-sprite-1.png" id="3_qjkh3"]
[ext_resource type="Texture2D" uid="uid://ubh3yp1tr4up" path="res://player/horse-details-1.png" id="4_g6k8r"]
[ext_resource type="PackedScene" uid="uid://df1chhurs07yt" path="res://player/blow_particles.tscn" id="5_g6k8r"]
[ext_resource type="AudioStream" uid="uid://bwqgpc1r3ucm" path="res://player/sounds/horse-gallop.ogg" id="5_qjkh3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_udsfw"]
radius = 25.0

[sub_resource type="Shader" id="Shader_g6k8r"]
resource_name = "VFEZ2DPreview"
code = "
// This shader was dynamically generated by the VFEZ material.
// **********************************
// Every change to the VFEZ material Render Options or 
// Include Options generates a new shader. After every change
// you can click on the new exported shader in the editor to view
// the latest changes. Only the definitions (#define) actually change.
// **********************************
shader_type canvas_item;
#define BLEND_MIX
#define COLOR_CHANGE
#include \"res://VFEZ-godot-main/Shaders/vfez_2d_template.gdshaderinc\"
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yw30f"]
shader = SubResource("Shader_g6k8r")
shader_parameter/texture_scale = Vector2(1, 1)
shader_parameter/texture_offset = Vector2(0, 0)
shader_parameter/texture_scroll_speed = Vector2(0, 0)
shader_parameter/replicate_on_scale = true
shader_parameter/texture_color = Color(1, 1, 1, 1)
shader_parameter/texture_alpha = 1.0
shader_parameter/texture_red_as_alpha = false
shader_parameter/premultiply_color = false
shader_parameter/premultiply_alpha = false
shader_parameter/contrast = 1.0
shader_parameter/brightness = 0.0
shader_parameter/rect_size_ratio = 1.0
shader_parameter/use_uv_polar = false
shader_parameter/use_uv_distortion = false
shader_parameter/use_uv_rotation = false
shader_parameter/use_uv_pixelate = false
shader_parameter/use_uv_twist = false
shader_parameter/use_uv_fisheye = false
shader_parameter/use_uv_pinch = false
shader_parameter/use_uv_handrawn = false
shader_parameter/use_uv_shake = false
shader_parameter/use_uv_wave = false
shader_parameter/use_uv_round_wave = false
shader_parameter/use_uv_wind = false
shader_parameter/use_uv_wrap = false
shader_parameter/use_uv_zoom = false
shader_parameter/use_color_single = false
shader_parameter/use_color_overlay_texture = false
shader_parameter/use_outline = false
shader_parameter/use_outline_inner = false
shader_parameter/use_alpha_disolve = false
shader_parameter/use_chromatic_aberration = false
shader_parameter/use_motion_blur = false
shader_parameter/use_glitch = false
shader_parameter/use_color_gradient = false
shader_parameter/use_color_radial_gradient = false
shader_parameter/use_color_toning = false
shader_parameter/use_color_ramp = false
shader_parameter/use_color_change = true
shader_parameter/change_color_1 = true
shader_parameter/color_1_to_change = Color(0.788235, 0.435294, 0.0980392, 1)
shader_parameter/color_1_to_replace = Color(0.788235, 0.435294, 0.0980392, 1)
shader_parameter/color_1_change_tolerance = 0.15
shader_parameter/change_color_2 = false
shader_parameter/color_2_to_change = Color(0, 0, 0, 1)
shader_parameter/color_2_to_replace = Color(0, 0, 0, 1)
shader_parameter/color_2_change_tolerance = 0.1
shader_parameter/change_color_3 = false
shader_parameter/color_3_to_change = Color(0, 0, 0, 1)
shader_parameter/color_3_to_replace = Color(0, 0, 0, 1)
shader_parameter/color_3_change_tolerance = 0.1
shader_parameter/use_color_ghost = false
shader_parameter/use_color_hologram = false
shader_parameter/use_color_posterize = false
shader_parameter/use_color_negative = false
shader_parameter/use_color_glow = false
shader_parameter/use_color_hsv_shift = false
shader_parameter/use_color_shadow = false
shader_parameter/use_color_greyscale = false
shader_parameter/use_color_shine = false
shader_parameter/use_alpha_mask = false
shader_parameter/use_alpha_remap = false
shader_parameter/use_alpha_cutoff = false
shader_parameter/use_alpha_clip = false
shader_parameter/use_alpha_radial_clip = false
shader_parameter/use_alpha_flicker = false
shader_parameter/use_particle_anim = false
script = ExtResource("2_x7bl2")
BlendMode = 0
LightMode = 0
metadata/_custom_type_script = "uid://cmca42ot4hlfv"

[sub_resource type="CircleShape2D" id="CircleShape2D_g1dw6"]
radius = 25.0

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 4
collision_mask = 5
script = ExtResource("1_c4pnv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_udsfw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_yw30f")
position = Vector2(-8, -34)
texture = ExtResource("3_qjkh3")

[node name="SpriteDetails" type="Sprite2D" parent="Sprite2D"]
texture = ExtResource("4_g6k8r")

[node name="BlowParticles" parent="." instance=ExtResource("5_g6k8r")]
position = Vector2(0, -13)

[node name="AnimationTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="RecoveryTimer" type="Timer" parent="."]
one_shot = true

[node name="PlayerName" type="RichTextLabel" parent="."]
z_index = 1
offset_left = -117.0
offset_top = -120.0
offset_right = 123.0
offset_bottom = -80.0
pivot_offset = Vector2(117, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
text = "Player "
fit_content = true
horizontal_alignment = 1

[node name="HitsLabel" type="RichTextLabel" parent="."]
z_index = 1
offset_left = -117.0
offset_top = -143.0
offset_right = 123.0
offset_bottom = -103.0
pivot_offset = Vector2(117, 0)
fit_content = true
horizontal_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStreamGallop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_qjkh3")
volume_db = -20.0

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, -12)
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2(5, 0)
polygon = PackedVector2Array(14, 23, 121, -1, 14, -25, 23, -1)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -13)
shape = SubResource("CircleShape2D_g1dw6")
debug_color = Color(0.88327, 0.334542, 0, 0.42)

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_hit_box_area_exited"]
